--- a/src/sass/components/_section--feedback.scss
+++ b/src/sass/components/_section--feedback.scss
@@ -49,30 +49,60 @@
     border-bottom: 4px solid $primary;
   }
 }
+.feedback-carousel.flickity-page-dots {
+  //position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  align-content: flex-start;
+  width: 100%;
+  height: 20px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  line-height: 1;
+  //right: -548px;
+  //top: 0;
 
+  .dot {
+    display: inline;
+    width: 13px;
+    height: 13px;
+    margin: 0;
+    margin-right: 8px;
+    background-color: #e2e2e2;
+    border-radius: 50%;
+    opacity: 0.4;
+    cursor: pointer;
+  }
+
+  .dot.is-selected {
+    opacity: 1;
+    background-color: $primary !important;
+  }
+}
 .dots {
-  ul {
+  .dotAll {
+    display: flex;
+    flex-direction: row;
     margin: 0;
     padding: 0 0 0 1rem;
     list-style: none;
     background-color: #ffffff;
     transform: translateY(15px);
-
-    li {
+    .dot {
       display: inline-block;
       margin-left: 0.5rem;
+      border: none;
+      display: block;
+      width: 13px;
+      height: 13px;
+      border-radius: 6px;
+      background-color: #e1e1e1;
 
-      a {
-        display: block;
-        width: 13px;
-        height: 13px;
-        border-radius: 6px;
-        background-color: #e1e1e1;
-
-        &.active,
-        &:hover {
-          background-color: $primary;
-        }
+      &:active,
+      &:hover {
+        background-color: $primary;
       }
     }
   }
@@ -110,4 +140,9 @@
       }
     }
   }
+}
+
+.carousel-cell {
+  width: 100%;
+  height: auto;
 }
