--- a/src/sass/components/_section--feedback.scss
+++ b/src/sass/components/_section--feedback.scss
@@ -4,6 +4,7 @@
 
 .feedback-title {
   position: relative;
+  margin-bottom: 15px;
 
   .row {
     border-bottom: 4px solid #e2e2e2;
@@ -63,7 +64,9 @@
   line-height: 1;
   //right: -548px;
   //top: 0;
-
+  .dotAll {
+    margin-top: 8px;
+  }
   .dot {
     display: inline;
     width: 13px;
@@ -89,7 +92,7 @@
     padding: 0 0 0 1rem;
     list-style: none;
     background-color: #ffffff;
-    transform: translateY(15px);
+    transform: translateY(10px);
     .dot {
       display: inline-block;
       margin-left: 0.5rem;
@@ -99,6 +102,7 @@
       height: 13px;
       border-radius: 6px;
       background-color: #e1e1e1;
+      padding: 0;
 
       &:active,
       &:hover {
