--- a/src/sass/components/_section--feedback.scss
+++ b/src/sass/components/_section--feedback.scss
@@ -69,7 +69,7 @@
       border-radius: 6px;
       padding: 0;
       outline: none;
-      background-color: #f1f1f1;
+      background-color: #e1e1e1;
       cursor: pointer;
       &:hover {
         background-color: $primary;
